<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.jaino.petner.presentation.viewmodel.schedule.ScheduleViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/postScheduleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timePicker" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sc_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feed_total_title"
            app:srcCompat="@drawable/feed"
            tools:layout_editor_absoluteY="98dp" />

        <ImageButton
            android:id="@+id/minus_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:onClick="@{() -> viewModel.minusCount()}"
            app:layout_constraintBottom_toBottomOf="@+id/sc_image"
            app:layout_constraintEnd_toStartOf="@+id/sc_image"
            app:layout_constraintTop_toTopOf="@+id/sc_image"
            app:srcCompat="@drawable/minus" />

        <ImageButton
            android:id="@+id/plus_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:onClick="@{() -> viewModel.plusCount()}"
            app:layout_constraintBottom_toBottomOf="@+id/sc_image"
            app:layout_constraintStart_toEndOf="@+id/sc_image"
            app:layout_constraintTop_toTopOf="@+id/sc_image"
            app:srcCompat="@drawable/plus" />

        <androidx.cardview.widget.CardView
            android:id="@+id/sc_top_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:id="@+id/scheduleTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule_title"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/feed_count_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="2회"
            android:text="@{@string/feed_count(viewModel.feedCountState)}"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/sc_image"
            app:layout_constraintStart_toStartOf="@+id/sc_image"
            app:layout_constraintTop_toBottomOf="@+id/sc_image" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/feed_total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/app_color"
            android:text="@string/feed_count_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sc_top_card" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/app_color"
            android:text="@string/feed_time_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feed_count_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>